--- a/frontend/assets/blog/2026-02-13-laminar-vs-langfuse-why-we-prefer-laminar.mdx
+++ b/frontend/assets/blog/2026-02-13-laminar-vs-langfuse-why-we-prefer-laminar.mdx
@@ -96,7 +96,7 @@ That means you can:
 - Backfill months of traces to validate a hypothesis
 - Turn production trace history into labeled datasets without writing scripts
 
-Langfuse is strong on prompt management, but Signals are built for **agent debugging at scale**: they sit directly on top of traces and make the system queryable in human terms.
+Langfuse is strong on prompt management, but it does **not** have a true equivalent to Signals. Its closest alternatives live in evals and scoring workflows, which are powerful but not trace-native in the same way. Signals are built for **agent debugging at scale**: they sit directly on top of traces and make the system queryable in human terms.
 
 ## UX: Trace-First vs Prompt-First
 
