feat: platform cleanup (#1269)
* feat: read signal usage, small padding fix, hide evaluators

* feat: update table placeholders, update sidebar usage

* feat: update docs link

* feat: update feature flags

* feat: signals feature os, granulate features

* feat: fix placeholders, fix feature flag checkk

--- a/frontend/assets/blog/2026-01-29-laminar-vs-langfuse-vs-langsmith-llm-observability-compared.mdx
+++ b/frontend/assets/blog/2026-01-29-laminar-vs-langfuse-vs-langsmith-llm-observability-compared.mdx
@@ -262,6 +262,7 @@ Langfuse also offers a **free self-host option** (MIT licensed) with all core fe
 </div>
 
 **LangSmith trace pricing:**
+
 - **Base traces:** $0.50 per 1k traces (14-day retention)
 - **Extended traces:** $2.50 per 1k to upgrade (400-day retention)
 - Traces with user feedback automatically upgrade to extended
@@ -340,6 +341,7 @@ You can send traces to LangSmith alongside other OTel-compatible backends, or ex
 ## Which Should You Choose?
 
 **Choose Laminar if:**
+
 - You need deep, causal debugging for complex agents
 - Real-time visibility during long-running operations is a must-have
 - Replay from captured spans is critical to your iteration workflow
@@ -348,12 +350,14 @@ You can send traces to LangSmith alongside other OTel-compatible backends, or ex
 - Data-volume pricing fits your usage pattern better than trace-based
 
 **Choose Langfuse if:**
+
 - You want a free, open-source self-host option
 - You prioritize a clear trace schema with strong evaluation/prompt/dataset workflows
 - You need agent graph visualization without vendor lock-in
 - You're working across multiple frameworks (not just LangChain)
 
 **Choose LangSmith if:**
+
 - You're heavily invested in the LangChain/LangGraph ecosystem
 - You want a purpose-built agent IDE (LangGraph Studio) for development
 - You need managed agent deployment with built-in infrastructure (checkpointing, scaling)
@@ -368,4 +372,4 @@ You can send traces to LangSmith alongside other OTel-compatible backends, or ex
 - **Start with Langfuse** if you prefer a broader evaluation and prompt-management workflow with open-source self-hosting. [Cloud Hobby or self-host ->](https://langfuse.com/pricing)
 - **Start with LangSmith** if you're building with LangChain/LangGraph and want the tightest integration plus agent deployment capabilities. [Developer plan ->](https://www.langchain.com/pricing)
 
-*Last updated: January 2026. Verify pricing and features against each vendor's current documentation before making decisions.*
+_Last updated: January 2026. Verify pricing and features against each vendor's current documentation before making decisions._
